# LibreEffects

./: .gitignore  BUILD.md  CMakeLists.txt  COLLABORATION_WORKFLOW.md  CONTRIBUTING.md  CURSOR_EXTENSIONS.md  CURSOR_UI_WORKFLOW.md  GITHUB_SETUP.md  GIT_COMMANDS.md  LICENSE  PROJECT_STRUCTURE.md  QT_INSTALL.md  README.md
apps/: .gitkeep
apps/librecanvas/: CMakeLists.txt
apps/librecanvas/resources/: librecanvas.qrc
apps/librecanvas/src/: canvaswidget.cpp  canvaswidget.h  clonestamptool.cpp  clonestamptool.h  document.cpp  document.h  history.cpp  history.h  lassotool.cpp  lassotool.h  layer.cpp  layer.h  layerpanel.cpp  layerpanel.h  main.cpp  mainwindow.cpp  mainwindow.h  tool.cpp  tool.h  toolpanel.cpp  toolpanel.h  transformtool.cpp  transformtool.h
docs/: .gitkeep
libs/: .gitkeep
libs/branding/: CMakeLists.txt  theme.cpp  theme.h
libs/core/: CMakeLists.txt
tests/: .gitkeep
tools/: .gitkeep
